fix: step header toggle gap

--- a/components/ProcessSteps/src/StepHeaderToggle.scss
+++ b/components/ProcessSteps/src/StepHeaderToggle.scss
@@ -6,6 +6,7 @@
   --utrecht-button-padding-block-start: 0;
   --utrecht-button-padding-inline-end: 0;
   --utrecht-button-padding-inline-start: 0;
+  --utrecht-button-icon-gap: 4px;
 
   border: 0;
   background-color: inherit;
